# domain_primitives

./: .gitignore  README.md  domain_prim.py  pyproject.toml  test_domain_prim.py
src/domain_primitives/: __init__.py  domain_prim.py
tests/: test_domain_prim.py
